--- a/esadmin.html
+++ b/esadmin.html
@@ -24,6 +24,9 @@
                   href="admin-select.html?type=exercise"
                   >Admin cwiczen</a
                 >
+                <a class="btn-white-outline" href="admin-wizard.html"
+                  >Kreator</a
+                >
                 <a class="btn-white-outline" href="#accUsers">Uzytkownicy</a>
                 <a class="btn-white-outline" href="#accPromo"
                   >Kody promo</a
