--- a/course.html
+++ b/course.html
@@ -48,7 +48,7 @@
 
             <a
               class="btn-yellow"
-              href="admin-select.html?type=lesson"
+              href="admin-wizard.html"
               id="adminQuickLesson"
               style="display: none"
             >
