--- a/esadmin.html
+++ b/esadmin.html
@@ -489,6 +489,27 @@
                 <label class="muted" style="font-weight: 900">Etykieta</label>
                 <input class="input" id="svcBadge" placeholder="np. Popularny" />
               </div>
+              <div style="min-width: 140px">
+                <label class="muted" style="font-weight: 900">Dni dostepu</label>
+                <input
+                  class="input"
+                  id="svcAccessDays"
+                  min="1"
+                  placeholder="np. 90"
+                  step="1"
+                  type="number"
+                />
+              </div>
+              <div style="min-width: 220px; flex: 1">
+                <label class="muted" style="font-weight: 900"
+                  >Poziomy dostepu</label
+                >
+                <input
+                  class="input"
+                  id="svcAccessLevels"
+                  placeholder="A1,A2,B1"
+                />
+              </div>
               <div style="min-width: 120px">
                 <label class="muted" style="font-weight: 900">Kolejnosc</label>
                 <input
