--- a/espanel.html
+++ b/espanel.html
@@ -193,6 +193,29 @@
                 <span class="hintSmall" id="settingsMsg"></span>
               </div>
             </div>
+            <div class="card" id="userReportCard">
+              <div class="sectionTitle" style="margin-top: 0">Reportar un problema</div>
+              <div class="muted">Cuentalo y lo revisamos.</div>
+              <div class="metaRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap; align-items: flex-end">
+                <select id="userReportType" class="select" style="min-width: 180px">
+                  <option value="bug">Bug</option>
+                  <option value="content">Contenido</option>
+                  <option value="payment">Pago</option>
+                  <option value="other" selected>Otro</option>
+                </select>
+                <select id="userReportLevel" class="select" style="min-width: 160px">
+                  <option value="">Nivel (opcional)</option>
+                  <option value="A1">A1</option>
+                  <option value="A2">A2</option>
+                  <option value="B1">B1</option>
+                  <option value="B2">B2</option>
+                </select>
+                <input id="userReportTopic" class="input" placeholder="ID tema (opcional)" style="min-width: 200px" />
+                <input id="userReportMessage" class="input" placeholder="Describe el problema..." style="min-width: 260px; flex: 1" />
+                <button class="btn-white-outline" id="btnUserReport" type="button">Enviar</button>
+                <span class="hintSmall" id="userReportStatus"></span>
+              </div>
+            </div>
           </div>
           <div class="referralSide">
             <div class="card card--promo referral-card referral-card--compact" id="referralCard">
