--- a/espanel.html
+++ b/espanel.html
@@ -68,6 +68,7 @@
                 ></span>
               </div>
             </div>
+            <div class="panelOverviewGrid">
             <div class="card" id="trialCard">
               <div class="sectionTitle" style="margin-top: 0">
                 🎁 Prueba gratis A1
@@ -112,6 +113,7 @@
               <div class="hintSmall" id="progLastActivity" style="margin-top: 8px">
                 Última actividad: -
               </div>
+            </div>
             </div>
             <div class="card" id="reviewSummaryCard">
               <div class="sectionTitle" style="margin-top: 0">Repaso</div>
@@ -158,6 +160,61 @@
                 </button>
                 <span class="hintSmall" id="reviewSaveStatus"></span>
               </div>
+          </div>
+            <div class="card" id="inboxCard">
+              <div class="sectionTitle" style="margin-top: 0">Bandeja</div>
+              <div class="muted">Avisos y novedades del equipo AquiVivo.</div>
+              <div id="inboxList" class="inboxList" style="margin-top: 12px"></div>
+            </div>
+          </div>
+          <div class="referralSide">
+            <div class="card" id="communityCard">
+              <div class="sectionTitle" style="margin-top: 0">Comunidad</div>
+              <div class="muted">Conecta con otros estudiantes, agrega amigos y charla.</div>
+              <div class="communityGrid" style="margin-top: 12px">
+                <div class="communityCol">
+                  <div class="subtitle" style="margin: 0">Tu codigo de amistad</div>
+                  <div class="metaRow" style="margin-top: 8px; gap: 10px; flex-wrap: wrap">
+                    <input id="friendCode" class="input" disabled style="max-width: 220px; font-weight: 900" />
+                    <button id="btnCopyFriendCode" class="btn-white-outline" type="button">Copiar</button>
+                    <button id="btnNewFriendCode" class="btn-white-outline" type="button">Nuevo</button>
+                  </div>
+                  <div id="friendCodeInfo" class="hintSmall" style="margin-top: 6px"></div>
+                  <div class="hr"></div>
+                  <div class="subtitle" style="margin: 0">Buscar personas</div>
+                  <div class="metaRow" style="margin-top: 8px; gap: 10px; flex-wrap: wrap">
+                    <input id="communitySearchInput" class="input" placeholder="Nombre o apellido" style="max-width: 220px" />
+                    <button id="btnCommunitySearch" class="btn-white-outline" type="button">Buscar</button>
+                  </div>
+                  <div id="communitySearchStatus" class="hintSmall" style="margin-top: 6px"></div>
+                  <div id="communitySearchResults" class="friendList" style="margin-top: 8px"></div>
+                  <div class="hr"></div>
+                  <div class="subtitle" style="margin: 0">Agregar amigo</div>
+                  <div class="metaRow" style="margin-top: 8px; gap: 10px; flex-wrap: wrap">
+                    <input id="friendCodeSearch" class="input" placeholder="Codigo de amistad" style="max-width: 220px" />
+                    <button id="btnSendFriendRequest" class="btn-yellow" type="button">Enviar</button>
+                  </div>
+                  <div id="friendReqStatus" class="hintSmall" style="margin-top: 6px"></div>
+                  <div class="hr"></div>
+                  <div class="subtitle" style="margin: 0">Solicitudes pendientes</div>
+                  <div id="friendRequestsList" class="friendList" style="margin-top: 8px"></div>
+                  <div class="subtitle" style="margin-top: 14px">Amigos</div>
+                  <div id="friendsList" class="friendList" style="margin-top: 8px"></div>
+                  <div class="subtitle" style="margin-top: 14px">Bloqueados</div>
+                  <div id="blockedList" class="friendList" style="margin-top: 8px"></div>
+                </div>
+                <div class="communityCol">
+                  <div class="subtitle" style="margin: 0">Mensajes</div>
+                  <div class="muted" id="chatHint" style="margin-top: 4px">Selecciona un amigo para chatear.</div>
+                  <div id="chatHeader" class="chatHeader" style="margin-top: 10px"></div>
+                  <div id="chatMessages" class="chatBox" style="margin-top: 10px"></div>
+                  <div class="metaRow chatInputRow" style="margin-top: 10px; gap: 10px; flex-wrap: wrap">
+                    <input id="chatInput" class="input" placeholder="Escribe un mensaje..." style="min-width: 220px; flex: 1" />
+                    <button id="btnSendMessage" class="btn-white-outline" type="button">Enviar</button>
+                  </div>
+                  <div id="chatStatus" class="hintSmall" style="margin-top: 6px"></div>
+                </div>
+              </div>
             </div>
             <div class="card" id="userSettingsCard">
               <div class="sectionTitle" style="margin-top: 0">Ajustes del perfil</div>
@@ -174,7 +231,7 @@
                   <option value="papi">Papi</option>
                 </select>
                 <select id="setLang" class="select" style="min-width: 160px">
-                  <option value="es">Español</option>
+                  <option value="es">EspaÃ±ol</option>
                   <option value="pl">Polski</option>
                 </select>
                 <select id="setGoal" class="select" style="min-width: 180px">
@@ -186,6 +243,18 @@
                 <label class="hintSmall" style="display: flex; gap: 8px; align-items: center">
                   <input id="setReviewReminders" type="checkbox" />
                   Recordatorios de repaso
+                </label>
+                <label class="hintSmall" style="display: flex; gap: 8px; align-items: center">
+                  <input id="setPublicProfile" type="checkbox" />
+                  Perfil publico
+                </label>
+                <label class="hintSmall" style="display: flex; gap: 8px; align-items: center">
+                  <input id="setAllowFriendRequests" type="checkbox" />
+                  Permitir solicitudes
+                </label>
+                <label class="hintSmall" style="display: flex; gap: 8px; align-items: center">
+                  <input id="setAllowMessages" type="checkbox" />
+                  Permitir mensajes
                 </label>
                 <button class="btn-white-outline" id="btnSaveSettings" type="button">
                   Guardar
@@ -216,8 +285,6 @@
                 <span class="hintSmall" id="userReportStatus"></span>
               </div>
             </div>
-          </div>
-          <div class="referralSide">
             <div class="card card--promo referral-card referral-card--compact" id="referralCard">
             <div class="sectionTitle" style="margin-top: 0">
               🎁 Tengo código de un pana 😎
@@ -310,9 +377,6 @@
             style="margin-top: 12px"
           ></div>
         </div>
-
-        <div class="referralRow" style="margin-top: 16px"></div>
-
 
         <!-- Settings modal (placeholder for panel-page.js) -->
         <div id="adminModal" class="modalOverlay" aria-hidden="true">
