--- a/espanel.html
+++ b/espanel.html
@@ -220,6 +220,12 @@
               <div class="sectionTitle" style="margin-top: 0">Ajustes del perfil</div>
               <div class="metaRow" style="gap: 10px; flex-wrap: wrap">
                 <input
+                  id="setHandle"
+                  class="input"
+                  placeholder="Usuario (ej: magda_23)"
+                  style="min-width: 220px"
+                />
+                <input
                   id="setDisplayName"
                   class="input"
                   placeholder="Nombre visible"
