--- a/perfil.html
+++ b/perfil.html
@@ -27,6 +27,7 @@
               <h1 class="glow-text" id="profileName" style="margin: 0; font-size: 36px">
                 Perfil
               </h1>
+              <div class="muted" id="profileHandle" style="margin-top: 6px"></div>
               <div class="muted" id="profileStatus" style="margin-top: 6px">—</div>
             </div>
           </div>
